--- a/.vscode/style.css
+++ b/.vscode/style.css
@@ -1,6 +1,13 @@
  li:hover{
 color: black;
 background-color: white;
+}
+html,body{
+    height: 100%;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden;
 } 
 .body{
     background-color: tomato;
