--- a/style.css
+++ b/style.css
@@ -2,10 +2,16 @@
     background-color: aqua;
 }
 .tab {
-    width: 100%;
+    width: auto;
     margin-top: 30px;
     background-color:deepskyblue;
 }
-.gap{
+.lec5{
+width: 50%;
+background-color:deepskyblue
 
+}
+.lec06{
+    width: auto;
+    background-color: deepskyblue;
 }
